# Mini-RAG-Retrieval-Augmented-Generation-

./: .env  README.md  config.py  gradio_ui.py  main.py  privacy_policy.md  pyproject.toml  rag_core.py  rag_index.sqlite  telegram_bot.py
docs/: company_overview.md  internal_policy.md  quick_start_guide.md
